syntax = "proto3";

option csharp_namespace = "BasketGrpcService";

message BasketItem {
  string id = 1;
  int32 amount = 2;
}

service BasketService {
  rpc GetBasket(GetBasketRequest) returns (GetBasketResponse);
}

message GetBasketRequest {
  string userId = 1;
}

message GetBasketResponse {
  repeated BasketItem items = 1;
  string error = 2;
}